--- a/resources/css/product.css
+++ b/resources/css/product.css
@@ -83,7 +83,7 @@ Code du carousel
     border-radius: 0 3px 3px 0;
     user-select: none;
     -webkit-user-select: none;
-    z-index: 99;
+    z-index: 1;
     transition: background-color 0.5s;
 }
 
@@ -190,15 +190,15 @@ Code du carousel
     }
 
     .magnifier {
-        width: 100%;
-        height: 100%;
-        pointer-events: none;
         position: absolute;
         top: 0;
         left: 0;
-        opacity: 0;
-        z-index: 99;
         display: block;
+        height: 100%;
+        width: 100%;
+        pointer-events: none;
+        opacity: 0;
+        z-index: 2;
     }
 }
 
